k8s/microservice1-service.yaml
# microservice1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1-svc
  namespace: ns-vs-demo
spec:
  selector:
    app: microservice1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: microservice1-loadbalancer
  namespace: ns-vs-demo
spec:
  type: LoadBalancer
  selector:
    app: microservice1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
